# pyweb_module_13

contacts_api/: .myenv.env  docker-compose.yml  limiter.py  main.py  pyproject.toml
contacts_api/postgres-data/base/13481/: pg_internal.init
contacts_api/postgres-data/base/16384/: 1247  1249  1259  16385  16394  16398  2224  2579  2604  2606  2608  2610  2620  2656  2657  2658  2659  2662  2663  2664  2665  2666  2667  2673  2674  2678  2679  2699  2701  2702  2703  2704  3455  5002  pg_internal.init
contacts_api/postgres-data/global/: 1260  pg_control  pg_internal.init
contacts_api/postgres-data/pg_stat/: db_0.stat  db_16384.stat  global.stat
contacts_api/src/conf/: config.py
contacts_api/src/db/: db.py  models.py
contacts_api/src/repository/: contacts.py  users.py
contacts_api/src/routes/: auth.py  contacts.py  users.py
contacts_api/src/services/: auth.py  cloudinary_service.py  email_service.py
django_app/: migrations.py  pyproject.toml
django_app/data/: authors.json
django_app/noteapp/: .env.example.env
django_app/noteapp/authors/: forms.py  models.py  urls.py  views.py
django_app/noteapp/authors/migrations/: 0001_initial.py  0002_author_authors.py  0003_alter_author_description.py  0004_alter_author_description.py
django_app/noteapp/noteapp/: settings.py  urls.py
django_app/noteapp/quotes/: forms.py  models.py  urls.py  views.py
django_app/noteapp/quotes/migrations/: 0001_initial.py  0002_alter_quote_quote.py
django_app/noteapp/tags/: forms.py  models.py  urls.py  views.py
django_app/noteapp/users/: forms.py  urls.py  views.py
(+20 files in other folders)
