[tool.poetry]
name = "django-app"
version = "0.1.0"
description = ""
authors = ["Gerenzeo <124388411+Gerenzeo@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "django_app"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.4"
psycopg2 = "^2.9.7"
django-environ = "^0.11.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
